<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBFCC6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="cursive"
            android:text="@string/app_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/question1"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/capitalText"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/question2"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/countryFrance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country1"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/countryRussia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country2"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/countryHolland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/countryS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country4"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/question3"
            android:textColor="#000"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oc3"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oc5"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/correctOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oc4"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/question4"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/oceanText"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:inputType="textCapCharacters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/question5"
            android:textColor="#000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rightOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uz"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/wrongOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="154dp"
                android:text="@string/jp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rightOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kz"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/wrongOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:text="@string/nd"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="checkQuiz"
            android:text="@string/button" />


    </LinearLayout>
</ScrollView>